[tool.poetry]
name = "invest-mind"
version = "0.1.0"
description = ""
authors = ["akioka123 <akinoka0111@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
